fix immutable collection bug